# discord_against_humanity

./: .dockerignore  .gitignore  .travis-ci.yml  Dockerfile  Dockerfile.seed  README.md  Taskfile.yml  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml  pr.yml  tag.yml
ansible/: ansible.cfg  build.yml  deploy.yml  install.yml  playbook.yml
bot/: bot.py  logging.json  requirements.txt
bot/cah/: cards.py  checks.py  game.py  player.py
bot/commands/: cah.py  discord_against_humanity.py
bot/discord_against_humanity/: checks.py  game.py  player.py
bot/utils/: api.py  decorator.py  embed.py  mongodoc.py
discord_against_humanity/: Dockerfile  docker-compose.yml
discord_against_humanity/bot/: bot.py  logging.json  requirements.txt
discord_against_humanity/bot/commands/: discord_against_humanity.py
discord_against_humanity/bot/discord_against_humanity/: cards.py  checks.py  game.py  player.py
discord_against_humanity/bot/utils/: debug.py  embed.py  emoji.py
discord_against_humanity/mongo/: imports.txt  mongo_init.sh
ext/: convert_cah.py
helm/discord-against-humanity/: Chart.yaml  values.yaml
helm/discord-against-humanity/templates/: _helpers.tpl  deployment.yaml  secret.yaml  serviceaccount.yaml
mongo/: imports.txt  mongo_init.sh
scripts/: convert_cah.py  seed_valkey.py
seed/: README.md
src/discord_against_humanity/: __init__.py  __main__.py  bot.py  logging_config.json
src/discord_against_humanity/adapters/: __init__.py  valkey.py
src/discord_against_humanity/checks/: __init__.py  game_checks.py
src/discord_against_humanity/commands/: cah.py
src/discord_against_humanity/domain/: __init__.py  cards.py  document.py  (+2 more)
tests/: conftest.py  test_architecture.py  test_bot.py  test_cards.py  test_debug.py  test_embed.py  test_emoji.py  test_game.py  test_game_simulation.py  test_integration.py  test_mongo.py  test_player.py  test_valkey.py
(+17 files in other folders)
